updated - to include number of AFDs

--- a/AFDs.ipynb
+++ b/AFDs.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNXV1RP5w8B1YGFUZbNuQcz",
+      "authorship_tag": "ABX9TyN7KqOn86qd2gQfdzPG/ytm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,13 +25,6 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/tjturnage/AFDs/blob/master/AFDs.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "xoqsD-rvmNPU"
-      }
     },
     {
       "cell_type": "code",
@@ -60,9 +53,9 @@
         },
         "cellView": "form",
         "id": "FpVWm-LgO2cC",
-        "outputId": "284e59bf-df2d-43d3-ac4f-1528c6495d0a"
+        "outputId": "83a991f3-c203-49c1-f5ec-275b952277e9"
       },
-      "execution_count": 4,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -76,18 +69,36 @@
     {
       "cell_type": "code",
       "source": [
+        "#@title Select the number of previous AFDs you want to collect\n",
+        "number_of_afds = 5 #@param [\"5\", \"10\", \"15\", \"20\", \"25\", \"30\", \"35\", \"40\", \"45\", \"50\"] {type:\"raw\"}\n"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "eRRCRl4Fdf3P"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#@title Check the AFD sections you want to collect\n",
         "update = True #@param {type:\"boolean\"}\n",
+        "synopsis = True #@param {type:\"boolean\"}\n",
         "short_term = True #@param {type:\"boolean\"}\n",
         "long_term = True #@param {type:\"boolean\"}\n",
         "discussion = False #@param {type:\"boolean\"}\n",
         "aviation = False #@param {type:\"boolean\"}\n",
         "fire_weather = False #@param {type:\"boolean\"}\n",
+        "hydrology = False #@param {type:\"boolean\"}\n",
         "marine = False #@param {type:\"boolean\"}\n",
+        "climate = False #@param {type:\"boolean\"}\n",
         "\n",
         "sections_to_retrieve = []\n",
         "if update:\n",
         "  sections_to_retrieve.append('.UPDATE')\n",
+        "if synopsis:\n",
+        "  sections_to_retrieve.append('.SYNOPSIS')\n",
         "if short_term:\n",
         "  sections_to_retrieve.append('.SHORT TERM')\n",
         "if long_term:\n",
@@ -98,8 +109,12 @@
         "  sections_to_retrieve.append('.AVIATION')\n",
         "if fire_weather:\n",
         "  sections_to_retrieve.append('.FIRE WEATHER')\n",
+        "if hydrology:\n",
+        "  sections_to_retrieve.append('.HYDROLOGY')\n",
         "if marine:\n",
         "  sections_to_retrieve.append('.MARINE')\n",
+        "if climate:\n",
+        "  sections_to_retrieve.append('.CLIMATE')\n",
         "\n",
         "print(f'You selected: {sections_to_retrieve}')"
       ],
@@ -109,15 +124,15 @@
         },
         "cellView": "form",
         "id": "vaTkUn_53yLI",
-        "outputId": "9c56057a-0379-4ce7-8dfa-bfb6d6f0854d"
+        "outputId": "63b7eef2-a5c1-4ba8-dba1-daa4ee25536d"
       },
-      "execution_count": 5,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "You selected: ['.UPDATE', '.SHORT TERM', '.LONG TERM']\n"
+            "You selected: ['.UPDATE', '.SYNOPSIS', '.SHORT TERM', '.LONG TERM']\n"
           ]
         }
       ]
@@ -137,7 +152,8 @@
         "output_path = 'afds.txt'\n",
         "    \n",
         "class AFD:\n",
-        "    def __init__(self,versions=50):\n",
+        "    def __init__(self,wfo,versions=50):\n",
+        "        self.wfo = wfo\n",
         "        self.versions = int(versions)\n",
         "        if self.versions > 50:\n",
         "            self.versions = 50\n",
@@ -181,10 +197,10 @@
         "        section_name_minus_leading_period = section_name[1:]\n",
         "        forecaster_id_section = afd_text.split('$$')[-1]\n",
         "        id_lines = forecaster_id_section.splitlines()\n",
-        "        final = 'No forecaster found!'\n",
+        "        fcstr = 'None found'\n",
         "        for line in id_lines:\n",
         "          if section_name_minus_leading_period in line:\n",
-        "            fcstr = str(line.split(\"...\")[1])\n",
+        "            fcstr = str(line.split(\"...\")[1])    \n",
         "            final = f'\\n\\n{buffer}{fcstr}{buffer}\\n\\n'\n",
         "            break\n",
         "\n",
@@ -250,14 +266,23 @@
         "\n",
         "        \n",
         "if __name__ == '__main__':\n",
-        "    test = AFD(50)\n",
+        "    test = AFD(wfo, number_of_afds)\n",
         "\n",
         "\n"
       ],
       "metadata": {
         "id": "Wv9imwOrwCdO"
       },
-      "execution_count": 6,
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "DwDtkcxcIoYr"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
