--- a/AFDs.ipynb
+++ b/AFDs.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNdZN5ZiLLKjRvm/VY4HcmM",
+      "authorship_tag": "ABX9TyN5S1UK7eO0aDMuZFN0ClR5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -77,9 +77,9 @@
         },
         "cellView": "form",
         "id": "FpVWm-LgO2cC",
-        "outputId": "eaa8a580-8c68-48df-a207-b0b11021b264"
+        "outputId": "ffd92c2f-a5f9-4bbd-b96a-436788219e5a"
       },
-      "execution_count": 1,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -106,9 +106,10 @@
         "number_of_afds = 45 #@param [\"5\", \"10\", \"15\", \"20\", \"25\", \"30\", \"35\", \"40\", \"45\", \"50\"] {type:\"raw\"}\n"
       ],
       "metadata": {
-        "id": "eRRCRl4Fdf3P"
+        "id": "eRRCRl4Fdf3P",
+        "cellView": "form"
       },
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -167,9 +168,9 @@
         },
         "cellView": "form",
         "id": "vaTkUn_53yLI",
-        "outputId": "287cb810-2c0f-4cfa-d02e-5ec65ed416b9"
+        "outputId": "30bc0aad-62c7-4490-c386-771ef581c2b3"
       },
-      "execution_count": 3,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -185,7 +186,7 @@
       "source": [
         "<hr>   \n",
         "\n",
-        "<font size='4.5em' color='#6666ff' style='bold'>Run the final cell below, and then scroll down past it.</font>   \n",
+        "<font size='4.5em' color='#6666ff' style='bold'>Run the final cell below, and then scroll down past it once it completes.</font>   \n",
         "<hr>"
       ],
       "metadata": {
@@ -317,7 +318,7 @@
       "metadata": {
         "id": "Wv9imwOrwCdO"
       },
-      "execution_count": 4,
+      "execution_count": 6,
       "outputs": []
     },
     {
