- create violin plots

--- a/xmacis.ipynb
+++ b/xmacis.ipynb
@@ -61,7 +61,7 @@
         },
         "outputId": "8b14e992-757e-412e-b163-33991fedb88f"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -111,7 +111,7 @@
         "outputId": "3c5271f9-63e0-43ef-b970-0a4e11af8755",
         "cellView": "form"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -132,7 +132,7 @@
         "id": "WzFXFCtgwAGm",
         "cellView": "form"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -242,7 +242,7 @@
         "id": "VV4Nj8_95AD9",
         "cellView": "form"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -258,7 +258,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -424,6 +424,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#@title\n",
         "months = list(np.arange(1,13))\n",
         "dates = list(np.arange(1,32))\n",
         "\n",
@@ -543,7 +544,8 @@
           "height": 542
         },
         "id": "2XeQRVOVsOK_",
-        "outputId": "6ae09d8a-cc11-4c71-db7e-8dc830a48550"
+        "outputId": "6ae09d8a-cc11-4c71-db7e-8dc830a48550",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": [
